# hippo

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
api/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.dev  docker-compose.yml
api/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
api/src/: crypto.rs  main.rs  models.rs  pool.rs  routes.rs  schema.patch  schema.rs
api/src/middleware/: auth.rs
api/src/models/: feed.rs  post.rs  user.rs
api/src/routes/: auth.rs  feeds.rs
src/: App.svelte  app.css  utils.ts
src/components/: Counter.svelte  Dropdown.svelte  EntryList.svelte  Login.svelte  LoginModal.svelte  Modal.svelte  NavBar.svelte
src/pages/: Feeds.svelte  Home.svelte
src/stores/: auth.ts  feeds.ts  posts.ts
